Add dark mode support to card components

--- a/frontend/2fa.html
+++ b/frontend/2fa.html
@@ -31,7 +31,7 @@
             </div>
             <p class="mb-4">Set up TOTP-based authentication and verify your one-time codes.</p>
 
-            <div class="bg-white p-6 rounded shadow border border-gray-400 mb-6">
+            <div class="bg-white p-6 rounded shadow border border-gray-400 mb-6 dark:bg-gray-800 dark:border-gray-700">
                 <h2 class="font-['Montserrat'] text-xl mb-4">Setup</h2>
                 <form id="generate-form" class="space-y-4">
                     <input id="gen-username" type="text" placeholder="Username" class="border p-2 rounded w-full" data-help="Enter your account username">
@@ -42,7 +42,7 @@
 
             </div>
 
-            <div class="bg-white p-6 rounded shadow border border-gray-400">
+            <div class="bg-white p-6 rounded shadow border border-gray-400 dark:bg-gray-800 dark:border-gray-700">
                 <h2 class="font-['Montserrat'] text-xl mb-4">Verify</h2>
                 <form id="verify-form" class="space-y-4">
                     <input id="ver-username" type="text" placeholder="Username" class="border p-2 rounded w-full" data-help="Enter your account username">
