--- a/frontend/budgets.html
+++ b/frontend/budgets.html
@@ -43,7 +43,7 @@
             </form>
             <div id="ai-result" class="mt-4"></div>
             <div id="ai-debug" class="mt-4 hidden">
-                <div class="bg-white p-4 rounded shadow border border-gray-400">
+                <div class="bg-white p-4 rounded shadow border border-gray-400 dark:bg-gray-800 dark:border-gray-700">
                     <h3 class="font-semibold text-gray-700 mb-2">AI Debug</h3>
                     <p class="text-sm font-semibold">Prompt</p>
                     <pre id="ai-debug-request" class="text-xs bg-gray-100 p-2 mb-2 overflow-x-auto"></pre>
