--- a/frontend/groups.html
+++ b/frontend/groups.html
@@ -29,7 +29,7 @@
                 <label class="block">Description<br><textarea id="group-description" class="border p-2 rounded w-full" data-help="Description for the group"></textarea></label>
                 <button type="submit" class="bg-indigo-600 text-white px-4 py-2 rounded">Create Group</button>
             </form>
-            <div class="mt-6 bg-white p-4 rounded shadow border border-gray-400">
+            <div class="mt-6 bg-white p-4 rounded shadow border border-gray-400 dark:bg-gray-800 dark:border-gray-700">
                 <h2 class="text-xl font-semibold mb-2">Existing Groups</h2>
                 <div id="group-table"></div>
             </div>
