--- a/frontend/transaction.html
+++ b/frontend/transaction.html
@@ -43,7 +43,7 @@
             }
 
             const card = document.createElement('div');
-            card.className = 'relative bg-white p-6 rounded shadow border border-gray-400';
+            card.className = 'relative bg-white p-6 rounded shadow border border-gray-400 dark:bg-gray-800 dark:border-gray-700';
 
             function createBadge(text, colorClasses) {
                 const span = document.createElement('span');
