--- a/frontend/projects.html
+++ b/frontend/projects.html
@@ -20,14 +20,14 @@
     <script src="https://code.highcharts.com/highcharts-more.js"></script>
     <!-- Font Awesome icons loaded via menu.js -->
 </head>
-<body class="bg-gradient-to-b from-indigo-50 to-white font-['Inter']">
+<body class="bg-gradient-to-b from-indigo-50 to-white font-['Inter'] dark:from-gray-900 dark:to-gray-800 dark:text-gray-100">
 <div class="flex min-h-screen">
-    <nav id="menu" class="hidden md:flex md:flex-col w-64 flex-shrink-0 bg-white border-r p-6 overflow-y-auto"></nav>
+    <nav id="menu" class="hidden md:flex md:flex-col w-64 flex-shrink-0 bg-white border-r p-6 overflow-y-auto dark:bg-gray-800 dark:border-gray-700"></nav>
     <main class="flex-1 min-w-0 overflow-x-auto p-6 space-y-6">
         <h1 class="font-['Roboto'] text-2xl font-semibold mb-4 text-indigo-700">Projects</h1>
         <p class="mb-4">Review your planned projects, explore costs and compare their priorities.</p>
 
-        <section class="bg-white p-6 rounded shadow border border-gray-400 space-y-6">
+        <section class="bg-white p-6 rounded shadow border border-gray-400 space-y-6 dark:bg-gray-800 dark:border-gray-700">
             <div>
                 <h2 class="font-['Roboto'] text-xl font-semibold mb-4">Budget Planning</h2>
                 <div class="flex items-end space-x-4">
