--- a/frontend/index.html
+++ b/frontend/index.html
@@ -41,7 +41,7 @@
                         <div class="absolute inset-0 bg-indigo-700/60 flex flex-col items-center justify-center text-center p-6">
                             <h1 class="font-['Roboto'] text-3xl md:text-4xl font-semibold mb-4 text-white">Welcome to <span id="landing-site-name">Finance Manager</span></h1>
                             <p class="text-indigo-100 mb-4">Select an option from the menu to get started exploring your finances. Each section opens tools and dashboards that help you understand where your money goes.</p>
-                            <a href="upload.html" class="inline-block bg-white text-indigo-700 px-4 py-2 rounded hover:bg-indigo-100 font-['Source_Sans_Pro'] font-light">Get Started</a>
+                            <a href="upload.html" class="inline-block bg-white text-indigo-700 px-4 py-2 rounded hover:bg-indigo-100 font-['Source_Sans_Pro'] font-light dark:bg-gray-700 dark:text-gray-100 dark:hover:bg-gray-600">Get Started</a>
                         </div>
                     </div>
                     <div class="relative rounded-lg overflow-hidden shadow h-72 md:h-96">
@@ -69,7 +69,7 @@
                 </div>
             </section>
 
-            <section class="mt-8 bg-white p-8 rounded-lg shadow-lg opacity-0 transition-opacity duration-700">
+            <section class="mt-8 bg-white p-8 rounded-lg shadow-lg opacity-0 transition-opacity duration-700 dark:bg-gray-800 dark:border-gray-700">
                 <h2 class="font-['Roboto'] text-2xl font-semibold mb-4 text-indigo-700">What You Can Do</h2>
                 <div class="grid grid-cols-1 sm:grid-cols-2 gap-4">
                     <div class="flex items-start space-x-3">
@@ -143,7 +143,7 @@
                 </div>
             </section>
 
-            <section class="mt-8 bg-white p-8 rounded-lg shadow-lg opacity-0 transition-opacity duration-700">
+            <section class="mt-8 bg-white p-8 rounded-lg shadow-lg opacity-0 transition-opacity duration-700 dark:bg-gray-800 dark:border-gray-700">
                 <h2 class="font-['Roboto'] text-2xl font-semibold mb-4 text-indigo-700">How Data Is Organised</h2>
                 <svg role="img" aria-label="Segments link to categories and tags while groups stand alone" class="mx-auto mb-4" width="360" height="120">
                     <defs>
