--- a/frontend/projects_archived.html
+++ b/frontend/projects_archived.html
@@ -23,13 +23,13 @@
         button, .accent { font-family: 'Source Sans Pro', sans-serif; font-weight: 300; }
     </style>
 </head>
-<body class="bg-gradient-to-b from-indigo-50 to-white font-sans">
+<body class="bg-gradient-to-b from-indigo-50 to-white font-sans dark:from-gray-900 dark:to-gray-800 dark:text-gray-100">
 <div class="flex min-h-screen">
-    <nav id="menu" class="hidden md:flex md:flex-col w-64 flex-shrink-0 bg-white border-r p-6 overflow-y-auto"></nav>
+    <nav id="menu" class="hidden md:flex md:flex-col w-64 flex-shrink-0 bg-white border-r p-6 overflow-y-auto dark:bg-gray-800 dark:border-gray-700"></nav>
     <main class="flex-1 min-w-0 overflow-x-auto p-6 space-y-6">
         <h1 class="text-2xl font-semibold mb-4 text-indigo-700">Archived Projects</h1>
         <p class="mb-4">Review projects that have been archived. Restore any project to make it active again.</p>
-        <section class="bg-white p-6 rounded shadow border border-gray-400">
+        <section class="bg-white p-6 rounded shadow border border-gray-400 dark:bg-gray-800 dark:border-gray-700">
             <div id="archived-projects-table"></div>
         </section>
     </main>
