Ensure board and archive pages load menu correctly

--- a/frontend/projects_archived.html
+++ b/frontend/projects_archived.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Archived Projects</title>
+    <meta http-equiv="Cache-Control" content="no-cache, no-store, must-revalidate">
     <script>
         window.tailwind = window.tailwind || {};
         window.tailwind.config = {};
