--- a/frontend/projects_board.html
+++ b/frontend/projects_board.html
@@ -57,8 +57,11 @@ function renderStars(score){
     const s = parseInt(score, 10) || 0;
     let stars = '';
     for(let i = 0; i < 5; i++){
-        const cls = i < s ? 'text-yellow-500' : 'text-gray-300';
-        stars += `<i class="fas fa-star ${cls} text-xs"></i>`;
+        if(i < s){
+            stars += '<i class="fas fa-star text-yellow-500 text-xs"></i>';
+        } else {
+            stars += '<i class="far fa-star text-gray-300 text-xs"></i>';
+        }
     }
     return stars;
 }
