--- a/frontend/segments.html
+++ b/frontend/segments.html
@@ -4,6 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="Cache-Control" content="no-cache, no-store, must-revalidate">
     <title>Manage Segments</title>
     <script>
         window.tailwind = window.tailwind || {};
